chore: fixed notifation layout for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -84,3 +84,16 @@ body{
 .input.error {
   border: 1px solid red;
 }
+.mobile-toast {
+  margin: 0;
+}
+
+/* Mobile spacing */
+@media (max-width: 768px) {
+  .mobile-toast {
+    width: auto !important;
+    margin-top: 16px !important;
+    margin-left: 16px !important;
+    margin-bottom: 16px !important;
+  }
+}
